# spirv-simulator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  main_opcode_checker.cpp  spirv.hpp  spirv_simulator.cpp  spirv_simulator.hpp  util.cpp  util.hpp
framework/: CMakeLists.txt  spirv_simulator.cpp  spirv_simulator.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  T_type_creation_test.cpp  arithmetic_test.cpp  testing_common.cpp  testing_common.hpp
test_shaders/: vulkan_compute_bda_pushconstant.spirv  vulkan_compute_bda_ssbo.spirv  vulkan_compute_bda_ubo.spirv  vulkan_shift_left.comp  vulkan_shift_left.spirv  vulkan_shift_right.comp  vulkan_shift_right.spirv  vulkan_type_creation.comp  vulkan_type_creation.spirv
